added util to fetch configurable data from azure

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
 			<version>1.18.30</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.azure/azure-storage-blob -->
+		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-storage-blob</artifactId>
+			<version>12.25.2</version>
+		</dependency>
 
 	</dependencies>
 
