added controller endpoints for configurability

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.profile.active=dev
+
 graphql.server.url=http://localhost:4000/graphql
 graphql.connection.key=da2-fakeApiId123456
 
+property.id=13
+
+cors.allowed.origin=http://localhost:5173/
+
+config.azure.blob.connection.string=
 
 config.azure.blob.container.name=configdata
 config.landing.azure.file.path=sampleLandingConfigData.json
