modified response type of property controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ property.id=13
 
 cors.allowed.origin=http://localhost:5173/
 
+spring.cloud.azure.keyvault.secret.property-sources[0].endpoint=
 config.azure.blob.connection.string=
 
 config.azure.blob.container.name=configdata
