--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,18 @@
 			<artifactId>azure-security-keyvault-secrets</artifactId>
 			<version>4.8.0</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/com.azure/azure-security-keyvault-keys -->
+		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-security-keyvault-keys</artifactId>
+			<version>4.8.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.azure/azure-security-keyvault-certificates -->
+		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-security-keyvault-certificates</artifactId>
+			<version>4.6.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
