--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
 			<artifactId>azure-security-keyvault-certificates</artifactId>
 			<version>4.6.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
